# opengov-oscal-pyprivacy

./: .gitignore  API.md  CHANGELOG.md  MIGRATION.md  README.md  pyproject.toml
.github/workflows/: tests.yml
src/opengov-oscal-pyprivacy/: dp_enums.py
src/opengov_oscal_pycore/: __init__.py  crud_catalog.py  diff.py  export.py  models.py  models_component.py  models_profile.py  models_ssp.py  props.py  props_parts.py  repo.py  schema_validation.py  validation.py  versioning.py
src/opengov_oscal_pycore/crud/: back_matter.py  links.py  params.py  parts.py  props.py
src/opengov_oscal_pycore/registry/: __init__.py
src/opengov_oscal_pyprivacy/: __init__.py  catalog_keys.py  legal_adapter.py  sdm_catalog.py  vocab.py
src/opengov_oscal_pyprivacy/codelist/: __init__.py  cascade.py  i18n.py  loader.py  models.py  registry.py
src/opengov_oscal_pyprivacy/converters/: __init__.py  dpia_converter.py  privacy_converter.py  resilience_converter.py  ropa_converter.py  sdm_converter.py  sdm_tom_converter.py
src/opengov_oscal_pyprivacy/data/: assurance_goals.csv  evidence_types.csv  mapping_schemes.csv  maturity_domains.csv  maturity_levels.csv  measures.csv  privacy_part_sets.csv  privacy_prop_sets.csv  (+1 more)
src/tests/: test_back_matter.py  test_catalog_crud.py  test_codelist_cascade.py  test_codelist_genericode.py  test_codelist_genericode_roundtrip.py  test_codelist_i18n.py  test_codelist_models.py  test_codelist_oscal.py  test_codelist_registry.py  test_codelist_xoev.py  test_component.py  test_converters_misc.py  test_converters_privacy.py  test_converters_sdm.py  test_diff.py  test_domain.py  test_dpia.py  test_dto.py  test_export.py  test_integration_workflow.py  test_legal_adapter.py  test_mapping_domain.py  test_models_and_crud.py  test_package_exports.py  test_params.py  test_performance.py  test_privacy_and_risk.py  test_profile.py  test_pycore_infrastructure.py  test_query.py  test_ropa.py  test_roundtrip_workbench_catalog.py  test_schema_validation.py  test_ssp.py  test_validation.py  test_vocab.py
tests/: test_catalog_crud.py
(+60 files in other folders)
