[build-system]
requires = ["hatchling>=1.18"]
build-backend = "hatchling.build"

[project]
name = "opengov-oscal-pyprivacy"
version = "0.4.0"
description = "OSCAL privacy utilities (core CRUD + privacy/SDM helpers) for OpenGov tooling."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "GPL-3.0-only" }
authors = [
  { name = "OpenGov", email = "developers@open-gov.group" }
]
dependencies = [
  "pydantic>=2.12.0",
  "opengov-pylegal-utils>=0.1.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0",
  "ruff",
  "mypy",
]

[project.urls]
Homepage = "https://github.com/open-gov-group/opengov-oscal-pyprivacy"
Issues = "https://github.com/open-gov-group/opengov-oscal-pyprivacy/issues"

[tool.hatch.build.targets.wheel]
# src-layout: point directly to package directories
packages = [
  "src/opengov_oscal_pycore",
  "src/opengov_oscal_pyprivacy",
]
# Ensure CSV vocabs are included in the wheel installation
include = [
  "src/opengov_oscal_pyprivacy/data/*.csv",
]

[tool.pytest.ini_options]
testpaths = ["src/tests"]
addopts = "-q"

[tool.ruff]
line-length = 100

[tool.mypy]
python_version = "3.10"
strict = true
warn_unused_configs = true
